# Arksolute-protagonist

./: .gitignore  README.md  electron-builder.json  package-lock.json  package.json
assets/: 维什戴尔-绝对主角-基建-Sit-x1.webm
scripts/: nsis-installer.nsh  package-installer.js  package-msi.js  package-windows.js  start-electron.js
src/: index.html  main.js  preload.js  renderer.js  styles.css  tauri-adapter.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
webm-assets/绝对主角/: profile.json  维什戴尔-绝对主角-基建-Interact-x1.webm  维什戴尔-绝对主角-基建-Move-x1.webm  维什戴尔-绝对主角-基建-Relax-x1.webm  维什戴尔-绝对主角-基建-Sleep-x1.webm
